--- a/Achievement.css
+++ b/Achievement.css
@@ -1,11 +1,13 @@
 body{
-    background-color: #000;
+    background-color:black;
     color: #fff;
 }
-.pages{
+ul{
     display: flex;
-    gap: 20%;
+    gap: 16%;
     margin-left: 10%;
+    white-space: nowrap;
+    font-size: 20px;
 }
 li{
     list-style: none;
@@ -17,11 +19,17 @@ a{
     text-decoration: none;
 }
 .heading{
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 30%;
+    margin-right: 30%;
     margin-top: 5%;
     background-color: orangered;
+    text-align: center;
+    
 
+}
+ol{
+    margin-left: 10%;
+    font-size: 20px;
 }
 .Logo{
 border: solid 5px;
@@ -32,4 +40,109 @@ padding: 50px;
     height: 20px;
     
 }
+body {
+    font-family: Arial, sans-serif;
+}
+#footer{
+    display: flex;
+    gap: 20%;
+    background-color: rgb(56, 51, 51);
+
+}
+
+@media  only screen and (min-width: 280px) and (max-width: 670px) {
+    ul {
+     flex-wrap: wrap;
+        gap: 10%;
+        margin-left: 0%;
+        white-space: nowrap;
+        font-size: 15px;
+      }
+      
+      li {
+        list-style: none;
+      }
+      a {
+        color: #fff;
+        text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+
+      @media  only screen and (min-width: 671px) and (max-width: 820px) {
+        ul {
+            flex-wrap: wrap;
+               gap: 10%;
+               margin-left: 0%;
+               white-space: nowrap;
+               font-size: 15px;
+             }
+             
+             li {
+               list-style: none;
+             }
+             a {
+               color: #fff;
+               text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+    @media  only screen and (min-width: 821px) and (max-width:1024px) {
+        ul {
+            flex-wrap: wrap;
+               gap: 10%;
+               margin-left: 0%;
+               white-space: nowrap;
+               font-size: 15px;
+             }
+             
+             li {
+               list-style: none;
+             }
+             a {
+               color: #fff;
+               text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+    @media  only screen and (min-width:1025px) and (max-width:1280px) {
+        ul {
+            flex-wrap: wrap;
+               gap: 10%;
+               margin-left: 0%;
+               white-space: nowrap;
+               font-size: 15px;
+             }
+             
+             li {
+               list-style: none;
+             }
+             a {
+               color: #fff;
+               text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+
+
 
