--- a/Mentorprofile.css
+++ b/Mentorprofile.css
@@ -1,11 +1,13 @@
 body{
-    background-color: #000;
+    background-color:black;
     color: #fff;
 }
-.pages{
+ul{
     display: flex;
-    gap: 10%;
-    margin-left: 10%;
+    gap: 30%;
+    margin-right: 10%;
+    white-space: nowrap;
+    font-size: 20px;
 }
 li{
     list-style: none;
@@ -13,24 +15,144 @@ li{
 a{
     color: #fff;
     text-decoration: none;
+
 }
 .heading{
     margin-left: 40%;
     margin-right: 30%;
     margin-top: 5%;
+    margin-bottom: 5%;
     background-color: orangered;
+    text-align: center;
 }
 .Logo{
 display: flex;
 }
 .image{
-    width: 30%;
+    width: 20%;
     height: 20px;
+    border-radius: 20px;
+
 }
-.mentor{
+/* .mentor{
     border: solid 5px;
     padding: 50px;
-}
+} */
 .info{
-    margin-top: 10%;
+    margin-top: 5%;
+    margin-right:20% ;
+    margin-left: 20px;
+    text-align: center;
+    margin-bottom: 10%;
 }
+#mymentor{
+    border-radius: 90px;
+    margin-left: 20%;
+    margin-bottom: 10%;
+}
+body {
+    font-family: Arial, sans-serif;
+}
+
+#footer{
+    display: flex;
+    gap: 20%;
+    background-color: rgb(56, 51, 51);
+
+}
+
+
+@media  only screen and (min-width: 280px) and (max-width: 670px) {
+    ul {
+     flex-wrap: wrap;
+        gap: 10%;
+        margin-left: 0%;
+        white-space: nowrap;
+        font-size: 15px;
+      }
+      
+      li {
+        list-style: none;
+      }
+      a {
+        color: #fff;
+        text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+
+      @media  only screen and (min-width: 671px) and (max-width: 820px) {
+        ul {
+            flex-wrap: wrap;
+               gap: 10%;
+               margin-left: 0%;
+               white-space: nowrap;
+               font-size: 15px;
+             }
+             
+             li {
+               list-style: none;
+             }
+             a {
+               color: #fff;
+               text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+    @media  only screen and (min-width: 821px) and (max-width:1024px) {
+        ul {
+            flex-wrap: wrap;
+               gap: 10%;
+               margin-left: 0%;
+               white-space: nowrap;
+               font-size: 15px;
+             }
+             
+             li {
+               list-style: none;
+             }
+             a {
+               color: #fff;
+               text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+    @media  only screen and (min-width:1025px) and (max-width:1280px) {
+        ul {
+            flex-wrap: wrap;
+               gap: 10%;
+               margin-left: 0%;
+               white-space: nowrap;
+               font-size: 15px;
+             }
+             
+             li {
+               list-style: none;
+             }
+             a {
+               color: #fff;
+               text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+
