--- a/style.css
+++ b/style.css
@@ -1,35 +1,137 @@
-body{
-    background-color: #000;
-    color: #fff;
+body {
+  background-color: black;
+  color: #fff;
+  font-family: Arial, sans-serif;
 }
-.pages{
+
+ul {
+  display: flex;
+  gap: 10%;
+  margin-left: 10%;
+  white-space: nowrap;
+  font-size: 20px;
+}
+
+li {
+  list-style: none;
+}
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+#logo {
+  width: 5%;
+}
+.logos {
+  display: flex;
+}
+#landphoto {
+  border-radius: 90%;
+  margin-left: 10%;
+  object-fit: cover;
+  width: 25%;
+}
+h1{
+    font-size: 20px;
+}
+#footer{
     display: flex;
-    gap: 10%;
+    gap: 20%;
+    background-color: rgb(56, 51, 51);
+
 }
-li{
-    list-style: none;
-}
-a{
-    color: #fff;
-    text-decoration: none;
-}
-.navbar{
-    border: solid 5px;
-    padding: 50px;
-}
-.logo{
-    display: flex;
-}
-@media screen and (min-width:320px) and (max-width:667){
-    .pages{
-        display: flex;
-        gap: 2%;
-    }  
-    li{
+@media  only screen and (min-width: 280px) and (max-width: 670px) {
+    ul {
+     flex-wrap: wrap;
+        gap: 10%;
+        margin-left: 0%;
+        white-space: nowrap;
+        font-size: 15px;
+      }
+      
+      li {
         list-style: none;
-    }
-    a{
+      }
+      a {
         color: #fff;
         text-decoration: none;
-    } 
-}
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+
+      @media  only screen and (min-width: 671px) and (max-width: 820px) {
+        ul {
+            flex-wrap: wrap;
+               gap: 10%;
+               margin-left: 0%;
+               white-space: nowrap;
+               font-size: 15px;
+             }
+             
+             li {
+               list-style: none;
+             }
+             a {
+               color: #fff;
+               text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+    @media  only screen and (min-width: 821px) and (max-width:1024px) {
+        ul {
+            flex-wrap: wrap;
+               gap: 10%;
+               margin-left: 0%;
+               white-space: nowrap;
+               font-size: 15px;
+             }
+             
+             li {
+               list-style: none;
+             }
+             a {
+               color: #fff;
+               text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+    @media  only screen and (min-width:1025px) and (max-width:1280px) {
+        ul {
+            flex-wrap: wrap;
+               gap: 10%;
+               margin-left: 0%;
+               white-space: nowrap;
+               font-size: 15px;
+             }
+             
+             li {
+               list-style: none;
+             }
+             a {
+               color: #fff;
+               text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+
