--- a/todo.css
+++ b/todo.css
@@ -12,6 +12,10 @@
     padding: 10px;
    
 }
+#image{
+    margin-top: 20px;
+
+}
 .todo-app{
     width: 100%;
     max-width: 540px;
@@ -65,6 +69,7 @@ padding: 12px 8px 12px 50px;
 user-select: none;
 cursor: pointer;
 position: relative;
+font-size: 20px;
 }
 ul li before{
     content:'';
@@ -96,19 +101,22 @@ ul li span{
     line-height: 40px;
     text-align: center;
 }
-.pages{
+ul{
     display: flex;
     flex-direction: row;
-    gap: 20%;
+    gap: 10%;
     margin-left: 10%;
-    background: orangered;
+    margin-right: 12%;
+    /* background: orangered; */
+    font-size: 20px;
 }
 
 li{
     list-style: none;
+    font-size: 20px;
 }
 li a{
-    /* color: white; */
+    color: white;
 }
 a{
     color: black;
@@ -122,5 +130,113 @@ ul{
 }
 .to-do{
     border: solid 5px;
-    background: black;
+    background:black;
 }
+body {
+    font-family: Arial, sans-serif;
+}
+#footer{
+    display: flex;
+    gap: 20%;
+    background-color: rgb(56, 51, 51);
+    color: #fff;
+    
+
+}
+@media  only screen and (min-width: 280px) and (max-width: 670px) {
+    ul {
+     flex-wrap: wrap;
+        gap: 10%;
+        margin-left: 0%;
+        white-space: nowrap;
+        font-size: 15px;
+      }
+      
+      li {
+        list-style: none;
+      }
+      a {
+        color: #fff;
+        text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+
+      @media  only screen and (min-width: 671px) and (max-width: 820px) {
+        ul {
+            flex-wrap: wrap;
+               gap: 10%;
+               margin-left: 0%;
+               white-space: nowrap;
+               font-size: 15px;
+             }
+             
+             li {
+               list-style: none;
+             }
+             a {
+               color: #fff;
+               text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+    @media  only screen and (min-width: 821px) and (max-width:1024px) {
+        ul {
+            flex-wrap: wrap;
+               gap: 10%;
+               margin-left: 0%;
+               white-space: nowrap;
+               font-size: 15px;
+             }
+             
+             li {
+               list-style: none;
+             }
+             a {
+               color: #fff;
+               text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+    @media  only screen and (min-width:1025px) and (max-width:1280px) {
+        ul {
+            flex-wrap: wrap;
+               gap: 10%;
+               margin-left: 0%;
+               white-space: nowrap;
+               font-size: 15px;
+             }
+             
+             li {
+               list-style: none;
+             }
+             a {
+               color: #fff;
+               text-decoration: none;
+      }
+      #footer{
+        flex-wrap: wrap;
+        gap: 10%;
+        background-color: rgb(56, 51, 51);
+    
+    }
+    }
+
+
+
+
