--- a/Goal.css
+++ b/Goal.css
@@ -1,15 +1,15 @@
 body{
     background-color:black;
     color: #fff;
+
 }
-ul{
-    display: flex;
-    justify-content: space-evenly;
-    gap: 40%;
-    margin-left: 10%;
-    white-space: nowrap;
-    font-size: 20px;
-}
+.navbar{
+    font-weight: 800;
+    justify-content: space-around;
+      display: flex;
+      font-size: 20px;
+      align-items: center;
+  }
 /* .nav{
     display: flex;
     gap: 30%;
@@ -31,15 +31,15 @@ a{
     text-align: center;
     
 }
-.Logo{
-display: flex;
+#logo{
+width: 40%;
 }
 .image{
     width: 30%;
     height: 20px;
 }
 .goal{
-    border: solid 5px;
+    /* border: solid 5px; */
     padding: 50px;
 }
 ol{
@@ -48,11 +48,17 @@ ol{
 body {
     font-family: Arial, sans-serif;
 }
+.thefooter{
+    margin-left: 10%;
+    display: flex;
+    gap: 120%;
+}
 
-#footer{
+footer{
     display: flex;
     gap: 20%;
     background-color: rgb(56, 51, 51);
+    margin-top:15% ;
 
 }
 
