--- a/Mentorprofile.css
+++ b/Mentorprofile.css
@@ -2,13 +2,13 @@ body{
     background-color:black;
     color: #fff;
 }
-ul{
-    display: flex;
-    gap: 30%;
-    margin-right: 10%;
-    white-space: nowrap;
-    font-size: 20px;
-}
+.navbar{
+    font-weight: 800;
+    justify-content: space-around;
+      display: flex;
+      font-size: 20px;
+      align-items: center;
+  }
 li{
     list-style: none;
 }
@@ -25,8 +25,8 @@ a{
     background-color: orangered;
     text-align: center;
 }
-.Logo{
-display: flex;
+#logo{
+width: 40%;
 }
 .image{
     width: 20%;
@@ -53,14 +53,17 @@ display: flex;
 body {
     font-family: Arial, sans-serif;
 }
-
-#footer{
+.thefooter{
+    margin-left: 10%;
+    display: flex;
+    gap: 120%;
+}
+footer{
     display: flex;
     gap: 20%;
     background-color: rgb(56, 51, 51);
 
 }
-
 
 @media  only screen and (min-width: 280px) and (max-width: 670px) {
     ul {
