--- a/todo.css
+++ b/todo.css
@@ -16,6 +16,10 @@
     margin-top: 20px;
 
 }
+.text{
+    color: black;
+    margin-top: 6%;
+}
 .todo-app{
     width: 100%;
     max-width: 540px;
@@ -109,6 +113,7 @@ ul{
     margin-right: 12%;
     /* background: orangered; */
     font-size: 20px;
+
 }
 
 li{
@@ -116,7 +121,7 @@ li{
     font-size: 20px;
 }
 li a{
-    color: white;
+ color: #fff;
 }
 a{
     color: black;
@@ -126,20 +131,32 @@ a{
    color: #edeef0;
 }
 ul{
-    color: #fff;
+    color: #ebe6e6;
 }
 .to-do{
     border: solid 5px;
     background:black;
 }
+.btn{
+    display: flex;
+    gap: 60px;
+}
 body {
     font-family: Arial, sans-serif;
 }
-#footer{
+.thefooter{
+    margin-left: 10%;
+    display: flex;
+    gap: 120%;
+}
+
+footer{
     display: flex;
     gap: 20%;
     background-color: rgb(56, 51, 51);
     color: #fff;
+    margin-top: 30%;
+
     
 
 }
